<resources>
    <string name="app_name">Covid19 Statistic</string>
    <string name="title_home">Home</string>
    <string name="title_statistic">Statistic</string>
    <string name="label_pleaseWait">Please wait..</string>
    <string name="label_covid19In">Covid-19 in </string>
    <string name="label_activeCase">Active case</string>
    <string name="label_positive">Positive</string>
    <string name="label_cured">Cured</string>
    <string name="label_recovered">Recovered</string>
    <string name="label_death">Death</string>
    <string name="label_topCountries">Top Countries</string>
    <string name="label_moreDetails">More details</string>
    <string name="label_covid19Symptoms">Covid19 Symptoms</string>
    <string name="label_preventCovid">Take steps to protect others</string>
    <string name="label_global">Global</string>
    <string name="label_country">Country</string>
    <string name="header_message">Message</string>
    <string name="message_sukses">Success</string>
    <string name="message_pending">Pending</string>
    <string name="message_gagal">Failed</string>
    <string name="button_close">Close</string>
    <string name="error_noInternet">No internet connection</string>
    <string name="label_language">Language</string>
    <string name="label_darkMode">Dark mode</string>
    <string name="label_lighMode">Ligh mode</string>

    <array name="array_covidSysmptoms">
        <item>Fever</item>
        <item>Sore throat</item>
        <item>Headache</item>
        <item>Difficulty breathing</item>
    </array>

    <array name="array_preventCovid">
        <item>Clean your hands often. Use soap and water, or an alcohol-based hand rub.</item>
        <item>Maintain a safe distance from anyone who is coughing or sneezing.</item>
        <item>Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze</item>
        <item>Stay home if you feel unwell.</item>
        <item>If you have a fever, cough and difficulty breathing, seek medical attention. Call in advance</item>
        <item>Follow the directions of your local health authority.</item>
    </array>
    
</resources>
