<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/mode"
    android:orientation="vertical"
    app:behavior_hideable="false"
    android:clickable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/bg_bottom_sheet">
            <ImageView
                android:id="@+id/scoll_up_down"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_scroll_up_down"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/titleStatisticText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/TitleTheme"
                    android:text="@string/title_statistic"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="top"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/search"
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:background="@drawable/bg_rounded_outline"
                    android:padding="5dp"
                    android:drawableLeft="@drawable/search"
                    android:drawablePadding="10dp"
                    android:textSize="14dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="0"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/titleCountryText"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:text="@string/label_country"
                        android:layout_width="120dp"
                        android:textColor="@color/bg_Blue"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/titlePositiveText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:textColor="@color/bg_Blue"
                        android:text="@string/label_positive"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/titleDeathText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:text="@string/label_death"
                        android:textColor="@color/bg_Red"
                        android:layout_weight="1"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/titleRecoveredText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:textColor="@color/bg_Green"
                        android:text="@string/label_recovered"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/devider"/>
            </LinearLayout>
                    <ListView
                        android:id="@+id/statisticList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
        </LinearLayout>
</RelativeLayout>