<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/dateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TitleTheme"
            android:text="10 May 2020"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorLight">
            <com.txusballesteros.widgets.FitChart
                android:id="@+id/detailDataStats"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:strokeSize="6dp"
                app:valueStrokeColor="#ff0000"
                app:backStrokeColor="@color/colorLight"
                app:animationMode="overdraw"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/bg_rounded_blue_dark"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/titlePositiveText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorTextDark"
                        android:text="@string/label_positive"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/positiveText"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorTextDark"
                        android:layout_weight="0"
                        android:text=": 12000"/>
                    <LinearLayout
                        android:id="@+id/positiveUpDownLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">
                    <ImageView
                        android:id="@+id/postiveUpDownImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/ic_arrow_upward_red"/>
                    <TextView
                        android:id="@+id/postiveUpDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:text="2000"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/bg_rounded_blue"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/titleActiveCaseText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/bg_Blue"
                        android:text="@string/label_activeCase"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/activeCaseText"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/bg_Blue"
                        android:text=": 12000"
                        android:layout_weight="0"/>
                    <LinearLayout
                        android:id="@+id/activeUpDownLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">
                    <ImageView
                        android:id="@+id/activeUpDownImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/ic_arrow_upward_red"/>
                    <TextView
                        android:id="@+id/activeUpDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:text="2000"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/bg_rounded_green"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/titleRecoveredText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/bg_Green"
                        android:text="@string/label_recovered"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/recoveredText"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/bg_Green"
                        android:text=": 12000"
                        android:layout_weight="0"/>
                    <LinearLayout
                        android:id="@+id/recoveredUpDownLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">
                    <ImageView
                        android:id="@+id/recoveredUpDownImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/ic_arrow_upward_green"/>
                    <TextView
                        android:id="@+id/recoveredUpDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:text="2000"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/bg_rounded_red"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/titleDeathText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/bg_Red"
                        android:text="@string/label_death"
                        android:layout_weight="0"/>
                    <TextView
                        android:id="@+id/deathText"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalTextTheme"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/bg_Red"
                        android:text=": 12000"
                        android:layout_weight="0"/>
                    <LinearLayout
                        android:id="@+id/deathUpDownLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">
                        <ImageView
                            android:id="@+id/deathUpDownImg"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/ic_arrow_upward_red"/>
                        <TextView
                            android:id="@+id/deathUpDown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/NormalTextTheme"
                            android:text="2000"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>